--- a/css/estilo.css
+++ b/css/estilo.css
@@ -70,11 +70,29 @@ body{ background-color: rgb(255, 255, 255);
                }
                
 .about{background: #003d52;
-    padding: 100px;
+    padding: 10px 100px 100px 100px;
     color:white;
     background-image: url(../imagens/bg_detalhe.png);
     background-repeat: no-repeat;
-    background-position: right bottom ;
-       
+    background-position: right bottom;
+}
+.about h2 { text-transform: uppercase;
+            font-size: 50px;
+            font-weight: normal;
+}
 
+.about p { font-size: 16px;
+           line-height: 1.5;
+           width: 70%;
+}
+#contact { 
+    margin: 50px 0;
+    
+}   
+
+#contact address { 
+    color :#143f52;
+    text-transform: uppercase;
+    font-size:26px;
+                     
 }
