--- a/css/estilo.css
+++ b/css/estilo.css
@@ -86,13 +86,32 @@ body{ background-color: rgb(255, 255, 255);
            width: 70%;
 }
 #contact { 
-    margin: 50px 0;
-    
+    margin: 50px 0 ; 
+   
 }   
 
-#contact address { 
-    color :#143f52;
-    text-transform: uppercase;
-    font-size:26px;
-                     
+#contact address   {
+     font-size:  26px;
+     color: #143f52;
+     text-transform: uppercase;
+     font-style: normal;
+     text-align: center;
+ }
+.maps { width: 100%;
+        height: 450px;
+        margin-top:50px;
+}
+.maps iframe { width: 100%;
+
+}
+
+.rodape{ background-color: #0b171f;
+    font-size:18px;
+    letter-spacing: 6px;
+    
+    padding: 20px;
+    color: rgba(255, 255, 255, 0.4);
+    text-align: center;
+    margin-top:15px;
+
 }
