--- a/css/estilo.css
+++ b/css/estilo.css
@@ -31,12 +31,18 @@ body{ background-color: rgb(255, 255, 255);
                  list-style: none;
                  margin: 0 15 0 0 ;
                  padding: 10px; 
+                 
   }
 .header-nav a{ color: #556c7e  ;
                 text-decoration: none;
                 text-transform: uppercase;
                 font-size: 15px;
                 letter-spacing: 5px;
+                transition: color 0.5s ;
+                
+}
+.header-nav a:hover{
+    color: white;
 }
  
 .Portifolio { padding:50px 100PX;
